# snobol4hs

./: LICENSE  README  snobol4c.cabal  snobol4hs.cabal
examples/: adding.snobol4  anchor.snobol4  arith.snobol4  array.snobol4  assign.snobol4  basic.snobol4  copier.snobol4  define.snobol4  fib.snobol4  indirect.snobol4  keyword.snobol4  lettercount.snobol4  negation.snobol4  unevaluated.snobol4  userdata.snobol4
lib/Data/: Stack.hs
lib/Language/: Snobol4.hs
lib/Language/Snobol4/: Interpreter.hs  Lexer.hs  Parser.hs  VM.hs
lib/Language/Snobol4/Interpreter/: Data.hs  Error.hs  Evaluator.hs  Evaluator.hs-boot  External.hs  Internal.hs  Internal.hs-boot  Primitives.hs  Scanner.hs  Shell.hs  State.hs  State.hs-boot  Types.hs
lib/Language/Snobol4/Interpreter/Data/: Array.hs  Integer.hs  Lazy.hs  ObjectCode.hs  Pattern.hs  Real.hs  String.hs  Table.hs  Types.hs  UserData.hs
lib/Language/Snobol4/Interpreter/Internal/: CallStack.hs  StackMachine.hs  StateMachine.hs  Types.hs
lib/Language/Snobol4/Interpreter/Internal/StateMachine/: Arrays.hs  CallStack.hs  Convert.hs  Error.hs  FuncOps.hs  Functions.hs  GC.hs  Keywords.hs  Labels.hs  Lazy.hs  ObjectCode.hs  Patterns.hs  ProgramState.hs  Run.hs  Statements.hs  Tables.hs  Types.hs  UserData.hs  Variables.hs
lib/Language/Snobol4/Interpreter/Internal/StateMachine/Error/: Types.hs
lib/Language/Snobol4/Interpreter/Internal/StateMachine/GC/: Types.hs
lib/Language/Snobol4/Interpreter/Primitives/: Prototypes.hs
lib/Language/Snobol4/Interpreter/Scanner/: Internal.hs  New.hs
lib/Language/Snobol4/Interpreter/Scanner/New/: Common.hs  FullScan.hs  QuickScan.hs  Types.hs
lib/Language/Snobol4/Interpreter/Shell/: Console.hs  Mock.hs
lib/Language/Snobol4/Lexer/: Tokens.hs
lib/Language/Snobol4/Parser/: Internal.hs  Types.hs
lib/Language/Snobol4/Syntax/: AST.hs
lib/Language/Snobol4/VM/: Bytecode.hs  IO.hs
lib/Language/Snobol4/VM/Bytecode/: Compiler.hs  Interpreter.hs  Primitives.hs
lib/Language/Snobol4/VM/Bytecode/Compiler/: Simple.hs
lib/Language/Snobol4/VM/Bytecode/Interpreter/: Internal.hs  StackMachine.hs  Types.hs  Wrappers.hs
lib/Language/Snobol4/VM/Bytecode/Interpreter/StackMachine/: Internal.hs
src/: Main.hs
src/runsnobol4/: Main.hs
src/snobol4/: Main.hs
src/snobol4c/: Main.hs
src/snobol4cat/: Main.hs
src/snobol4ci/: Main.hs  Shell.hs
src/snobol4db/: Main.hs
test/common/: Examples.hs
test/expression/: Main.hs
test/lexer/: Main.hs
test/parser/: ASTs.hs  Main.hs
test/primitive/: Main.hs
test/program/: Main.hs
