name:                snobol4c
version:             0.1.0.0
synopsis:            Interpreter/Compiler for the SNOBOL4 language
description:         Please see README.md
homepage:            https://github.com/githubuser/snobol4c#readme
license:             MIT
license-file:        LICENSE
author:              Andrew Melnick
maintainer:          meln5674@kettering.edu
copyright:           2016 Andrew Melnick
category:            Compilers
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     lib
    exposed-modules:    Language.Snobol4
                      , Language.Snobol4.Interpreter
                      , Language.Snobol4.Interpreter.Types
                      , Language.Snobol4.Interpreter.Shell
                      , Language.Snobol4.Interpreter.Shell.Console
                      , Language.Snobol4.Lexer
                      , Language.Snobol4.Lexer.Tokens
                      , Language.Snobol4.Parser
                      , Language.Snobol4.Syntax.AST
                      , Language.Snobol4.VM
                      , Language.Snobol4.VM.Bytecode
                      , Language.Snobol4.VM.IO
    other-modules:      Language.Snobol4.Interpreter.Internal
                      , Language.Snobol4.Interpreter.Internal.Types
                      , Language.Snobol4.Interpreter.Evaluator
                      , Language.Snobol4.Interpreter.Scanner
                      , Language.Snobol4.Interpreter.Scanner.Internal
                      , Language.Snobol4.Parser.Types
                      , Language.Snobol4.Parser.Internal
    build-depends:      base
                      , parsec
                      , transformers
                      , containers
                      , vector
                      , mtl
    default-language:   Haskell2010


executable snobol4c
  hs-source-dirs:       src/snobol4c
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5
                      , snobol4c
  default-language:     Haskell2010


executable snobol4ci
  hs-source-dirs:       src/snobol4ci
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5
                      , snobol4c
                      , haskeline
                      , transformers
                      , mtl
  default-language:     Haskell2010


test-suite lexer
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       lib, test/lexer
  other-modules:        Language.Snobol4.Lexer
                      , Language.Snobol4.Lexer.Tokens
  build-depends:        base, HUnit, parsec
  default-language:     Haskell2010


test-suite parser
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       lib, test/parser
  other-modules:        Language.Snobol4.Lexer
                      , Language.Snobol4.Lexer.Tokens
                      , Language.Snobol4.Parser
                      , Language.Snobol4.Syntax.AST
  build-depends:        base, HUnit, parsec, mtl, transformers
  default-language:     Haskell2010


test-suite expression
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       lib, test/expression
  other-modules:        Language.Snobol4.Syntax.AST
                      , Language.Snobol4.Interpreter.Types
                      , Language.Snobol4.Interpreter.Internal
                      , Language.Snobol4.Interpreter.Internal.Types
                      , Language.Snobol4.Interpreter.Shell
  build-depends:        base, HUnit, vector, containers, mtl, transformers
  default-language:     Haskell2010


test-suite scanner
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       lib, test/scanner
  other-modules:        Language.Snobol4.Syntax.AST
                      , Language.Snobol4.Interpreter.Types
                      , Language.Snobol4.Interpreter.Internal
                      , Language.Snobol4.Interpreter.Internal.Types
                      , Language.Snobol4.Interpreter.Shell
                      , Language.Snobol4.Interpreter.Scanner
  build-depends:        base, HUnit, vector, containers, mtl, transformers, parsec
  default-language:     Haskell2010


